switch to java8 functional features